# Hask_C

lab1/: lab1.cabal
lab1/src/: Lab02.hs  Lab03.hs  Lab03_part2.hs  Lab04.hs  Main.hs
lab4/: lab4.cabal
lab4/src/: Hcat.hs  Hello1.hs  Hello2.hs  Hello3.hs  Hsort.hs  Huniq.hs  Makefile  test_piping.sh
lab5/: lab5.cabal
lab5/src/: Makefile  triangle_game.hs  triangle_output.txt
