name: lab4
version: 0.0.1
cabal-version: -any
build-type: Simple
license: AllRightsReserved
license-file: ""
copyright:
maintainer:
build-depends: base -any
stability:
homepage:
package-url:
bug-reports:
synopsis:
description: .
category:
author:
tested-with:
data-files:
data-dir: ""
extra-source-files:
extra-tmp-files:
 
executable: lab4
main-is: Main.hs
buildable: True
build-tools:
cpp-options:
cc-options:
ld-options:
pkgconfig-depends:
frameworks:
c-sources:
default-language:
other-languages:
default-extensions:
other-extensions:
extensions:
extra-libraries:
extra-lib-dirs:
includes:
install-includes:
include-dirs:
hs-source-dirs: src
other-modules: Huniq Hsort Hcat Capslocker GetCharTest ForMTest
               Hello3 Hello2 Hello1 HelloWorld
ghc-prof-options:
ghc-shared-options:
ghc-options:
hugs-options:
nhc98-options:
jhc-options: